--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -3,7 +3,7 @@
 
   <h2>
     This is the home page for the
-    <a href="#">Ruby on Rails Tutorial A</a>
+    <a href="#">Ruby on Rails Tutorial ABC</a>
     sample application.
   </h2>
 
